[package]
name = "tearor"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"
categories = ["rust-patterns", "no-std"]
keywords = ["cell", "threads", "mistakes", "tearing", "torn"]
repository = "https://github.com/thomcc/tearor"
readme = "README.md"
description = "Easily turn data races into data corruption!"

[dependencies]
bytemuck = "1"
